-Bug Fixed: (check all clear, selected element can't move out of the canvas, remove select when tools change if the current tool is pointer and there is a selected element) -Graphical features: (toolbar always visible, eraser icon, PixWeb logo, transparent canvas background, delete icon, rotate icon, remove delete button from toolbar and put it under the selected element) -Functional features: (delete function, resize canvas)

--- a/trunk/WebContent/CSS/main.css
+++ b/trunk/WebContent/CSS/main.css
@@ -15,8 +15,7 @@ html,body {
 }
 
 #imageView {
-	//background: rgba(255,255,255,0.1);
-	background: none;
+	background:url('images/backgrounds/transparent_background.png') repeat;
 	border: 10px solid #333;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -159,4 +158,8 @@ html,body {
 
 .iconCircle {
 	background-image: url("images/icons/circle.png");
+}
+
+.iconEraser {
+	background-image: url("images/icons/eraser.png");
 }
